# raytracer-in-a-year-maybe

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile_without_conan  conanfile.txt  readme.md
src/: CMakeLists.txt  camera.hh  gui.cpp  gui.hh  image.hh  main.cpp  main_gui.cpp  object.hh  ray.hh  vec.hh
